Keep sequre and padding btm

--- a/public/index.html
+++ b/public/index.html
@@ -131,7 +131,7 @@
             <div class="clg_details_main">
 
 
-                <p>Use ( rmlau or iitd ) to see results</p>
+                <p>NOTE :- Use short name of college (eg : rmlau or iitd ) to see results.</p>
                 <input type="text" id="clg_name_search" placeholder="College Name">
                 <input type="button" id="clg_name_submit" value="Submit">
 
