Custum Alert box created

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,14 @@
 
     <body>
 
+        <!-- Below is Error Box =========>  -->
+        <div class="error_altert">
+            <div>
+                <span id="cancel">Press X Key or Click Here</span>
+                <div class="error_altert_content">
+                </div>
+            </div>
+        </div>
 
         <div id="header">
             <h1>Open to Intern</h1>
@@ -90,7 +98,7 @@
             <div id="regestation" class="right">
 
 
-                <form action="">
+                <form id="regesterForm" action="">
 
                     <div class="reg_form">
 
@@ -155,7 +163,7 @@
             <div class="allContent_create_clg">
 
                 <div class="left">
-                    <form action="">
+                    <form id="createClgForm" action="">
 
                         <div class="clg_create_from">
     
