--- a/public/index.html
+++ b/public/index.html
@@ -66,7 +66,7 @@
 
             <div class="left">
 
-                <div class="left_content">
+                <div id="left_content" class="left_content">
 
                     <h1>Regestation for Intern</h1>
                     <br>
