--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,9 @@
         <meta charset="!">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Home Page</title>
+        <title>Open to Inter(Home page)</title>
         <link rel="stylesheet" href="style.css">
+        <link rel="icon" type="image/x-icon" href="https://i.pinimg.com/564x/36/02/6b/36026b43de814207920950d88128d57a.jpg">
     </head>
 
     <body>
