Update in time and some changes

--- a/public/index.html
+++ b/public/index.html
@@ -255,6 +255,7 @@
                         </div>
 
                     </form>
+                    <p>Give feedback to see all feedback of this website.</p>
                 </div>
 
             </div>
@@ -301,19 +302,8 @@
             <input type="button" value="Show All Feedbacks" onclick="showAllFeedBack()" id="show_all_feed_btn">
 
             <div id="process_all_feeds"></div>
-
-            <div id="all_feedback">
-
-                <!-- <div class="user_feeds_are">
-                    <h3>Name :- Ashish Kuldeep</h3>
-                    <p>Type :- Feedback</p>
-                    <p>Count :- </p>
-                    <p>Time :- </p>
-                    <p>Message :- Very nice website!</p>
-                </div> -->
-
-               
-            </div>
+            <!-- Result div below ===> -->
+            <div id="all_feedback"></div>
 
         </div>
 
