--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Open to Inter(Home page)</title>
         <link rel="icon" type="image/x-icon"
-            href="https://i.pinimg.com/564x/36/02/6b/36026b43de814207920950d88128d57a.jpg">
+            href="./change.jpeg">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
@@ -62,7 +62,7 @@
             </div>
 
             <div class="right">
-                <img src="https://i.pinimg.com/564x/36/02/6b/36026b43de814207920950d88128d57a.jpg" alt="Interns Pictue"
+                <img src="./change.jpeg" alt="Interns Pictue"
                     srcset="">
             </div>
 
