--- a/public/index.html
+++ b/public/index.html
@@ -226,19 +226,19 @@
                                 <br>
                                 <h2>Types of Feedback :-</h1>
                                 <div id="feed_radio">
-                                    <input type="radio" name="feed_type" value="feedback_only" id="feedback_only"
+                                    <input type="radio" name="feed_type" value="Feedback" id="feedback_only"
                                         checked><label for="feedback_only">Feedback</label><br>
 
-                                    <input type="radio" name="feed_type" value="suggestion" id="Suggestion"><label
+                                    <input type="radio" name="feed_type" value="Suggestion" id="Suggestion"><label
                                         for="Suggestion">Suggestion</label><br>
 
-                                    <input type="radio" name="feed_type" value="advice" id="advice"><label
+                                    <input type="radio" name="feed_type" value="Advice" id="advice"><label
                                         for="advice">Advice</label> <br>
 
-                                    <input type="radio" name="feed_type" value="bug" id="bug"><label
+                                    <input type="radio" name="feed_type" value="Bug" id="bug"><label
                                         for="bug">Bug</label> <br>
 
-                                    <input type="radio" name="feed_type" value="criticize" id="criticize"><label
+                                    <input type="radio" name="feed_type" value="Criticize" id="criticize"><label
                                         for="criticize">Criticize</label> 
 
                                 </div>
