Second last commit all done for now

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,8 @@
         <meta charset="!">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Open to Inter(Home page)</title>
+        <title>Inter City Homepage</title>
+
         <link rel="icon" type="image/x-icon"
             href="./change.jpeg">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -27,7 +28,7 @@
         </div>
 
         <div id="header">
-            <h1>Open to Intern</h1>
+            <h1>Intern City</h1>
         </div>
 
         <div class="nav">
@@ -40,25 +41,25 @@
             
         </div>
 
+        <!-- Below div for how many scrolled -->
         <div  id="progress_top" > </div>
-
-
-
-
 
         <div class="intro">
             <div class="left">
 
                 <ul type="circle">
                     <h1>Features of this website is:-</h1>
-                    <li>1</li>
-                    <li>2</li>
-                    <li>3</li>
-                    <li>4</li>
-                    <li>5</li>
+                    <li>In section 1 :- Intro of website shown.</li>
+                    <li>In section 2 :- On this website any student can regester itself by avilable colleges, after successsful regestation user will see it's data.</li>
+                    <li>In section 3 :- Anyone can see how many interns are appilied for this college by college name.</li>
+                    <li>In section 4 :- Anyone create new college, after successsful creaton any other student will be able to regester as intern for that college.</li>
+                    <li>In section 5 :- User can give it's valueable feedback for this site and that feedback will be store in Data base.</li>
+                    <li>In section 6 :- A small about page for connection.</li>
+                    <li>In section 7 :- After successsful feedback user can see all feedback of this website , that feedbacks given by real person.</li>
+                    <li>Main features are :- DB calls , Css animations , Integrate Backend to Frontend , Alert box , Sound with alert box.</li>
+                    <li>Improvment area :- UI of web , Include more features , Reduce time in DB call.</li>
+                    <li>Learn with this project :- Fetch call , Integrating Frontend and Backend , Play sound with JS , Custo alert box , Making responsive.</li>
                 </ul>
-
-
             </div>
 
             <div class="right">
@@ -85,7 +86,7 @@
                         </li>
                         <li>
 
-                            <p>All avilables colleges are :- <b>rmlau , iitd </b></p>
+                            <p>All avilables colleges are :- <b>rmlau , iitd , iitp , iitk , iith </b></p>
                         </li>
                         <li>
                             Please make sure data should be dummy because this is dummy project.
@@ -148,7 +149,7 @@
             <div class="clg_details_main">
 
 
-                <p>NOTE :- Use short name of college (eg : rmlau or iitd ) to see results.</p>
+                <p>NOTE :- <b>Use short name of college (eg : rmlau or iitd ) to see results.</b></p>
                 <input type="text" id="clg_name_search" placeholder="College Name">
                 <input type="button" id="clg_name_submit" value="Submit">
 
@@ -246,7 +247,7 @@
                                 <div>
                                     <br>
                                     <label for="feed_msg"><h2>Feedback Message :-</h2></label>
-                                    <textarea name="" placeholder="I like the website." id="feed_msg" id="" cols="40" rows="8"></textarea>
+                                    <textarea name="" placeholder="Nice website (Your Feedback Message)" id="feed_msg" id="" cols="40" rows="8"></textarea>
                                 </div>
 
                                 <input type="button" id="feed_submit_btn" value="Submit">
