Remove a line in form section

--- a/public/index.html
+++ b/public/index.html
@@ -260,7 +260,7 @@
                                 <div>
                                     <br>
                                     <label for="feed_msg"><h2>Feedback Message :-</h2></label>
-                                    <textarea name="" placeholder="Nice website (Your Feedback Message)" id="feed_msg" id="" cols="40" rows="8"></textarea>
+                                    <textarea name="" placeholder="Nice website (Your Feedback Message)" id="feed_msg"  cols="40" rows="8"></textarea>
                                 </div>
 
                                 <div>
